US#47 Changes to tasks#60, 61, 68 to add "Hosts" table

--- a/scanner_app/template/DatabaseTemplate.html
+++ b/scanner_app/template/DatabaseTemplate.html
@@ -5,18 +5,21 @@
         <h2>Scan Report</h2>
         <table border = 1>
             <h2>Devices</h2>
+
                 {% for row in rows %}
                 <tr>
                     <th>deviceName</th>
                     <td>{{row["deviceName"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>deviceManufacturer</th>
                     <td>{{row["deviceManufacturer"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>cpeURI</th>
@@ -27,108 +30,126 @@
 
         <table border = 1>
             <h2>Vulnerabilities</h2>
+
                 {% for row in rows %}
                 <tr>
                     <th>vulnID</th>
                     <td>{{row["vulnID"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Model</th>
                     <td>{{row["Model"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>cpeName</th>
                     <td>{{row["cpeName"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>cpe22uri</th>
                     <td>{{row["cpe22uri"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>cpe23uri</th>
                     <td>{{row["cpe23uri"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>versionsAffected</th>
                     <td>{{row["versionsAffected"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Description</th>
                     <td>{{row["description"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>CVSSScore</th>
                     <td>{{row["CVSSScore"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>attackVector</th>
                     <td>{{row["attackVector"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>attackComplexity</th>
                     <td>{{row["attackComplexity"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>privilegesRequired</th>
                     <td>{{row["privilegesRequired"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>userInteraction</th>
                     <td>{{row["userInteraction"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>confidentialityImpact</th>
                     <td>{{row["confidentialityImpact"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>integrityImpact</th>
                     <td>{{row["integrityImpact"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>availabilityImpact</th>
                     <td>{{row["availabilityImpact"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>baseScore</th>
                     <td>{{row["baseScore"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>baseSeverity</th>
                     <td>{{row["baseSeverity"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>exploitabilityScore</th>
@@ -139,24 +160,21 @@
 
         <table border = 1>
             <h2>Scan History</h2>
+
                 {% for row in rows %}
                 <tr>
                     <th>scanID</th>
                     <td>{{row["scanID"]}}</td>
                 </tr>
                 {% endfor %}
-                {% for row in rows %}
-                <tr>
-                    <th>Model</th>
-                    <td>{{row["Model"]}}</td>
-                </tr>
-                {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Date</th>
                     <td>{{row["Date"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Duration</th>
@@ -166,19 +184,82 @@
         </table>
 
         <table border = 1>
+            <h2>Hosts</h2>
+
+                {% for row in rows %}
+                <tr>
+                    <th>hostID</th>
+                    <td>{{row["hostID"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._ip</th>
+                    <td>{{row["host._ip"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._macAddress</th>
+                    <td>{{row["host._macAddress"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._osFamily</th>
+                    <td>{{row["host._osFamily"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._osGen</th>
+                    <td>{{row["host._osGen"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._name</th>
+                    <td>{{row["host._name"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>host._vendor</th>
+                    <td>{{row["host._vendor"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row in rows %}
+                <tr>
+                    <th>scanID</th>
+                    <td>{{row["scanID"]}}</td>
+                </tr>
+                {% endfor %}
+        </table>
+
+        <table border = 1>
             <h2>Parameters</h2>
+
                 {% for row in rows %}
                 <tr>
                     <th>ScanID</th>
                     <td>{{row["ScanID"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>ParameterValue</th>
                     <td>{{row["ParameterValue"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>ParameterType</th>
@@ -189,30 +270,35 @@
 
         <table border = 1>
             <h2>PenTest History</h2>
+
                 {% for row in rows %}
                 <tr>
                     <th>PenTestID</th>
                     <td>{{row["PenTestID"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>VulnID</th>
                     <td>{{row["VulnID"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Model</th>
                     <td>{{row["Model"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>ScanID</th>
                     <td>{{row["ScanID"]}}</td>
                 </tr>
                 {% endfor %}
+
                 {% for row in rows %}
                 <tr>
                     <th>Result</th>
