--- a/scanner_app/template/DatabaseTemplate.html
+++ b/scanner_app/template/DatabaseTemplate.html
@@ -9,21 +9,21 @@
                 {% for row1 in row1 %}
                 <tr>
                     <th>deviceName</th>
-                    <td>{{row["deviceName"]}}</td>
+                    <td>{{row1["deviceName"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row1 in row1 %}
                 <tr>
                     <th>deviceManufacturer</th>
-                    <td>{{row["deviceManufacturer"]}}</td>
+                    <td>{{row1["deviceManufacturer"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row1 in row1 %}
                 <tr>
                     <th>cpeURI</th>
-                    <td>{{row["cpeURI"]}}</td>
+                    <td>{{row1["cpeURI"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
@@ -34,126 +34,112 @@
                 {% for row2 in row2 %}
                 <tr>
                     <th>vulnID</th>
-                    <td>{{row["vulnID"]}}</td>
+                    <td>{{row2["vulnID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
-                    <th>Model</th>
-                    <td>{{row["Model"]}}</td>
+                    <th>cveName</th>
+                    <td>{{row2["cveName"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
-                    <th>cpeName</th>
-                    <td>{{row["cpeName"]}}</td>
-                </tr>
-                {% endfor %}
-
-                {% for row2 in row2 %}
-                <tr>
-                    <th>cpe22uri</th>
-                    <td>{{row["cpe22uri"]}}</td>
-                </tr>
-                {% endfor %}
-
-                {% for row2 in row2 %}
-                <tr>
-                    <th>cpe23uri</th>
-                    <td>{{row["cpe23uri"]}}</td>
-                </tr>
-                {% endfor %}
-
-                {% for row2 in row2 %}
-                <tr>
-                    <th>versionsAffected</th>
-                    <td>{{row["versionsAffected"]}}</td>
-                </tr>
-                {% endfor %}
-
-                {% for row2 in row2 %}
-                <tr>
-                    <th>Description</th>
-                    <td>{{row["description"]}}</td>
+                    <th>description</th>
+                    <td>{{row2["description"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>CVSSScore</th>
-                    <td>{{row["CVSSScore"]}}</td>
+                    <td>{{row2["CVSSScore"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>attackVector</th>
-                    <td>{{row["attackVector"]}}</td>
+                    <td>{{row2["attackVector"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>attackComplexity</th>
-                    <td>{{row["attackComplexity"]}}</td>
+                    <td>{{row2["attackComplexity"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
-                    <th>privilegesRequired</th>
-                    <td>{{row["privilegesRequired"]}}</td>
+                    <th>customScore</th>
+                    <td>{{row2["customScore"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row2 in row2 %}
+                <tr>
+                    <th>customScoreReason</th>
+                    <td>{{row2["customScoreReason"]}}</td>
+                </tr>
+                {% endfor %}
+
+                {% for row2 in row2 %}
+                <tr>
+                    <th>priviledgesRequired</th>
+                    <td>{{row2["priviledgesRequired"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>userInteraction</th>
-                    <td>{{row["userInteraction"]}}</td>
+                    <td>{{row2["userInteraction"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>confidentialityImpact</th>
-                    <td>{{row["confidentialityImpact"]}}</td>
+                    <td>{{row2["confidentialityImpact"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>integrityImpact</th>
-                    <td>{{row["integrityImpact"]}}</td>
+                    <td>{{row2["integrityImpact"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
-                    <th>availabilityImpact</th>
-                    <td>{{row["availabilityImpact"]}}</td>
+                    <th>availibilityImpact</th>
+                    <td>{{row2["availibilityImpact"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>baseScore</th>
-                    <td>{{row["baseScore"]}}</td>
+                    <td>{{row2["baseScore"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>baseSeverity</th>
-                    <td>{{row["baseSeverity"]}}</td>
+                    <td>{{row2["baseSeverity"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row2 in row2 %}
                 <tr>
                     <th>exploitabilityScore</th>
-                    <td>{{row["exploitabilityScore"]}}</td>
+                    <td>{{row2["exploitabilityScore"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
@@ -164,21 +150,21 @@
                 {% for row3 in row3 %}
                 <tr>
                     <th>scanID</th>
-                    <td>{{row["scanID"]}}</td>
+                    <td>{{row3["scanID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row3 in row3 %}
                 <tr>
                     <th>Date</th>
-                    <td>{{row["Date"]}}</td>
+                    <td>{{row3["Date"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row3 in row3 %}
                 <tr>
                     <th>Duration</th>
-                    <td>{{row["Duration"]}}</td>
+                    <td>{{row3["Duration"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
@@ -189,56 +175,56 @@
                 {% for row4 in row4 %}
                 <tr>
                     <th>hostID</th>
-                    <td>{{row["hostID"]}}</td>
+                    <td>{{row4["hostID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._ip</th>
-                    <td>{{row["host._ip"]}}</td>
+                    <td>{{row4["host._ip"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._macAddress</th>
-                    <td>{{row["host._macAddress"]}}</td>
+                    <td>{{row4["host._macAddress"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._osFamily</th>
-                    <td>{{row["host._osFamily"]}}</td>
+                    <td>{{row4["host._osFamily"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._osGen</th>
-                    <td>{{row["host._osGen"]}}</td>
+                    <td>{{row4["host._osGen"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._name</th>
-                    <td>{{row["host._name"]}}</td>
+                    <td>{{row4["host._name"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>host._vendor</th>
-                    <td>{{row["host._vendor"]}}</td>
+                    <td>{{row4["host._vendor"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row4 in row4 %}
                 <tr>
                     <th>scanID</th>
-                    <td>{{row["scanID"]}}</td>
+                    <td>{{row4["scanID"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
@@ -249,21 +235,21 @@
                 {% for row5 in row5 %}
                 <tr>
                     <th>ScanID</th>
-                    <td>{{row["ScanID"]}}</td>
+                    <td>{{row5["ScanID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row5 in row5 %}
                 <tr>
                     <th>ParameterValue</th>
-                    <td>{{row["ParameterValue"]}}</td>
+                    <td>{{row5["ParameterValue"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row5 in row5 %}
                 <tr>
                     <th>ParameterType</th>
-                    <td>{{row["ParameterType"]}}</td>
+                    <td>{{row5["ParameterType"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
@@ -274,35 +260,35 @@
                 {% for row6 in row6 %}
                 <tr>
                     <th>PenTestID</th>
-                    <td>{{row["PenTestID"]}}</td>
+                    <td>{{row6["PenTestID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row6 in row6 %}
                 <tr>
                     <th>VulnID</th>
-                    <td>{{row["VulnID"]}}</td>
+                    <td>{{row6["VulnID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row6 in row6 %}
                 <tr>
                     <th>Model</th>
-                    <td>{{row["Model"]}}</td>
+                    <td>{{row6["Model"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row6 in row6 %}
                 <tr>
                     <th>ScanID</th>
-                    <td>{{row["ScanID"]}}</td>
+                    <td>{{row6["ScanID"]}}</td>
                 </tr>
                 {% endfor %}
 
                 {% for row6 in row6 %}
                 <tr>
                     <th>Result</th>
-                    <td>{{row["Result"]}}</td>
+                    <td>{{row6["Result"]}}</td>
                 </tr>
                 {% endfor %}
         </table>
